--- a/style.css
+++ b/style.css
@@ -18,13 +18,26 @@ p{ font-size: 1.25em;}
 ul{ list-style: none;}
 li{ font-size: 1.25em;}
 
+nav a {
+  box-shadow: 0 0 20px 0 rgba(255, 255, 255, 0.3);
+  border-radius: 4cqmin;
+}
+
+nav a:hover,
+nav a:focus {
+  background-color: rgb(53, 52, 53);
+  color: rgba(155, 104, 3, 0.596);
+  transition: background-color 1s ease-out;
+  outline: 0;
+}
+
 button{
     font-size: 1.25em;
     font-weight: bold;
     padding: 10px 30px;
     border-radius: 5px;
     border: 2px solid rgba(0,0,0,0.3);
-    box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
+    box-shadow: 2px 2px 10px rgba(227, 220, 220, 0.5);
     color: white;
     background-color: blueviolet;
 }
@@ -33,49 +46,7 @@ button:hover{
     background-color: rgb(101, 33, 165);
 }
 
-.container{
-    max-width: 1400px;
-    margin: auto;
-}
-
 .color-acento{ color:blueviolet; }
-
-header{
-    background-color: rgb(245,245,245);
-    
-}
-
-header .logo{
-    margin: 0;
-    padding: 25px 30px;
-    font-weight: bold;
-    color: blueviolet;
-    font-size: 1.6em;
-}
-
-header .container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-header nav{
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    padding-bottom: 25px;
-}
-
-header a{
-    padding: 5px 12px;
-    text-decoration: none;
-    font-weight: bold;
-    color: black;
-}
-
-header a:hover{
-    color: blueviolet;
-}
 
 #hero{
     display: flex;
@@ -96,11 +67,11 @@ header a:hover{
 }
 
 #hero h1{
-    color: white;
+    color: rgb(248, 246, 246);
 }
 
 #hero button{
-    font-size: 1.75em;
+    font-size: 1.25em;
 }
 
 #somos-pf .container{
@@ -141,7 +112,7 @@ header a:hover{
         rgba(0,0,0,0.5),
         rgba(0,0,0,0.5)
     )
-    ,url("media/front-end.jpg");
+    ,url("./media/estatua.jpg");
 
 }
 
@@ -151,7 +122,7 @@ header a:hover{
         rgba(0,0,0,0.5),
         rgba(0,0,0,0.5)
     )
-    ,url("media/full-stack.jpg");
+    ,url("./media/contrato.jpg");
 }
 
 .carta:nth-child(3){
@@ -160,7 +131,7 @@ header a:hover{
         rgba(0,0,0,0.5),
         rgba(0,0,0,0.5)
     )
-    ,url("media/python.jpg");
+    ,url("./media/reunion.jpg");
 }
 
 .carta:nth-child(4){
@@ -169,12 +140,19 @@ header a:hover{
         rgba(0,0,0,0.5),
         rgba(0,0,0,0.5)
     )
-    ,url("media/python.jpg");
+    ,url("./media/somos-pf.jpg");
 
 }
 
+#caracteristicas{
+        background-image: url("./media/secretaria.jpeg");
+        background-repeat: no-repeat;
+        background-size: 500px 400px;
+        background-position: calc(100vw - 500px) 120px;
+}
+
 #caracteristicas .container{
-    text-align: center;
+    text-align: initial;
     padding: 250px 12px;
 }
 
@@ -195,11 +173,11 @@ header a:hover{
 }
 
 #final h2{
-    font-size: 9vw;
+    font-size: 6vw;
 }
 
 #final button{
-    font-size: 5vw;
+    font-size: 3vw;
 }
 
 footer{
