--- a/style.css
+++ b/style.css
@@ -206,21 +206,6 @@ footer .container{
 }
 
 @media (width < 850px){
-    header{
-        position: fixed;
-        width: 100%;
-    }
-
-    header .container{
-        flex-direction: row;
-        justify-content: space-between;
-    }
-
-    header nav{
-        flex-direction: row;
-        padding-bottom: 0;
-        padding-right: 20px;
-    }
 
     #hero h1{
         font-size: 5em;
@@ -286,7 +271,7 @@ footer .container{
             rgba(0,0,0,0.5),
             rgba(0,0,0,0.5)
         )
-        ,url("media/front-end-cropped.jpg");
+        ,url("./media/estatua.jpg");
 
     }
 
@@ -296,7 +281,7 @@ footer .container{
             rgba(0,0,0,0.5),
             rgba(0,0,0,0.5)
         )
-        ,url("media/full-stack-cropped.jpg");
+        ,url("./media/contrato.jpg");
     }
 
     .carta:nth-child(3){
@@ -305,12 +290,22 @@ footer .container{
             rgba(0,0,0,0.5),
             rgba(0,0,0,0.5)
         )
-        ,url("media/python-cropped.jpg");
+        ,url("./media/reunion.jpg");
+
+    }
+
+    .carta:nth-child(4){
+        background-image: linear-gradient(
+            0deg,
+            rgba(0,0,0,0.5),
+            rgba(0,0,0,0.5)
+        )
+        ,url("./media/somos-pf.jpg");
 
     }
 
     #caracteristicas{
-        background-image: url("./media/background-2.jpeg");
+        background-image: url("./media/secretaria.jpeg");
         background-repeat: no-repeat;
         background-size: 500px 400px;
         background-position: calc(100vw - 500px) 120px;
