--- a/style.css
+++ b/style.css
@@ -18,21 +18,34 @@ p{ font-size: 1.25em;}
 ul{ list-style: none;}
 li{ font-size: 1.25em;}
 
+.botonera{
+    position: sticky;
+    position: sticky;
+    top: 0;
+    left: 0;
+    background-color: rgb(230, 230, 230);
+}
+
 nav a {
-  box-shadow: 0 0 20px 0 rgba(255, 255, 255, 0.3);
-  border-radius: 4cqmin;
+    box-shadow: 0 0 20px 0 rgba(255, 255, 255, 0.3);
+    border-radius: 4cqmin;
 }
 
 nav a:hover,
 nav a:focus {
-  background-color: rgb(79, 78, 79);
-  color: rgba(155, 104, 3, 0.596);
-  transition: background-color 1s ease-out;
-  outline: 0;
+    background-color: rgb(79, 78, 79);
+    color: rgba(155, 104, 3, 0.596);
+    transition: background-color 1s ease-out;
+    outline: 0;
 }
 
 .nav-link:hover{
     color: rgb(238, 226, 226);
+}
+
+.navbar-brand{
+    padding-left: 8px;
+    padding-right: 8px;
 }
 
 .navbar-brand:hover{
